Added some functionality to login button

--- a/Client/src/assets/styles.css
+++ b/Client/src/assets/styles.css
@@ -39,4 +39,10 @@ body {
 
 #log-in-button {
   background-color: #bbe1fa;
+  margin-left: 1em;
+}
+
+.hero {
+  align-items: center !important;
+  justify-content: center !important;
 }
