Updated login button to take the user to a login page.

--- a/Client/src/assets/styles.css
+++ b/Client/src/assets/styles.css
@@ -46,3 +46,11 @@ body {
   align-items: center !important;
   justify-content: center !important;
 }
+
+.box {
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 3em;
+  max-width: 500px;
+  width: 100%;
+}
