--- a/Client/src/assets/styles.css
+++ b/Client/src/assets/styles.css
@@ -39,8 +39,9 @@ body {
 
 #log-in-button {
   background-color: #bbe1fa;
-  margin-left: 1em;
-  margin-right: 1em;
+  color: black;
+  margin-top: 1em;
+  margin-left: 15px;
 }
 
 .hero {
